# aws-rs

./: Cargo.toml  README.md
src/: auth.rs  aws.rs  s3.rs  util.rs
src/http/: mod.rs
